test/conformance/chainsaw/policy-validation/cluster-policy/nested-foreach-numbered-variables/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox-1
    image: public.ecr.aws/docker/library/busybox:1.35
  - name: busybox-2
    image: public.ecr.aws/docker/library/busybox:1.35
